# atcommand

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: add.rs  config.rs  contest.rs  lib.rs  main.rs  submit.rs  test.rs  util.rs
tests/: cli.rs
