[package]
name = "atcommand"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[[bin]]
name = "atc"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
